fix(components): fix dark mode button colors

--- a/packages/swirl-components/src/components/swirl-card/swirl-card.css
+++ b/packages/swirl-components/src/components/swirl-card/swirl-card.css
@@ -19,6 +19,10 @@
   font: inherit;
   text-decoration: none;
   flex-direction: column;
+
+  --swirl-ghost-button-background-default: var(--s-surface-default);
+  --swirl-ghost-button-background-hovered: var(--s-surface-hovered);
+  --swirl-ghost-button-background-pressed: var(--s-surface-pressed);
 }
 
 a.card,
